stable mobile view update.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,30 @@
       }
       canvas {
         border: 0.1px solid grey;
+        /* Default: no forced size, let JS handle */
+        display: block;
+        max-width: 100vw;
+        max-height: 100vh;
+      }
+      @media only screen and (orientation: landscape) and (max-width: 900px) {
+        html, body {
+          width: 100vw;
+          height: 100vh;
+          margin: 0;
+          padding: 0;
+          overflow: hidden;
+        }
+        body {
+          flex-direction: row;
+          align-items: stretch;
+          justify-content: stretch;
+        }
+        canvas {
+          width: 100vw !important;
+          height: 100vh !important;
+          max-width: 100vw;
+          max-height: 100vh;
+        }
       }
       a {
         color: rgb(161, 157, 157);
