stable with good image quality on mobile view.

--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
           justify-content: stretch;
         }
         canvas {
-          width: 100vw !important;
-          height: 100vh !important;
+          /* Let JS set width/height for correct aspect ratio */
           max-width: 100vw;
           max-height: 100vh;
         }
