Pause and sound button position changed.

--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
         >YouTube Tutorial</a
       >
     </div> -->
-    <canvas id="game"></canvas>
+    <div id="game-canvas-container" style="position:relative; display:inline-block;">
+      <canvas id="game"></canvas>
+    </div>
   </body>
 </html>
